--- a/package.json
+++ b/package.json
@@ -160,6 +160,7 @@
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/history": "4.7.9",
     "@types/jest": "^27.0.2",
+    "@types/lodash": "^4.14.175",
     "@types/node": "16.10.2",
     "@types/react": "^17.0.27",
     "@types/react-dom": "^17.0.9",
@@ -222,7 +223,10 @@
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
+    "firebase": "^9.1.3",
     "history": "4.x.x",
+    "jotai": "^1.4.0",
+    "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
