--- a/package.json
+++ b/package.json
@@ -225,11 +225,13 @@
     "electron-updater": "^4.3.9",
     "firebase": "^9.1.3",
     "history": "4.x.x",
+    "immer": "^9.0.6",
     "jotai": "^1.4.0",
     "lodash": "^4.17.21",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
+    "react-toastify": "^8.0.3",
     "regenerator-runtime": "^0.13.9"
   },
   "devEngines": {
