--- a/package.json
+++ b/package.json
@@ -234,7 +234,12 @@
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-toastify": "^8.0.3",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "http-errors": "~1.6.3",
+    "morgan": "~1.9.1"
   },
   "devEngines": {
     "node": ">=14.x",
