--- a/package.json
+++ b/package.json
@@ -222,6 +222,7 @@
     "@mui/material": "^5.0.4",
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.4",
+    "axios": "^0.24.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "electron-debug": "^3.2.0",
@@ -236,11 +237,13 @@
     "jotai": "^1.4.0",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
+    "multer": "^1.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
     "react-toastify": "^8.0.3",
-    "regenerator-runtime": "^0.13.9"
+    "regenerator-runtime": "^0.13.9",
+    "uuid": "^8.3.2"
   },
   "devEngines": {
     "node": ">=14.x",
