--- a/package.json
+++ b/package.json
@@ -223,27 +223,19 @@
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.4",
     "axios": "^0.24.0",
-    "cookie-parser": "~1.4.4",
-    "debug": "~2.6.9",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
-    "express": "~4.16.1",
     "firebase": "^9.1.3",
-    "firebase-admin": "^10.0.0",
     "history": "4.x.x",
-    "http-errors": "~1.6.3",
     "immer": "^9.0.6",
     "jotai": "^1.4.0",
     "lodash": "^4.17.21",
     "morgan": "~1.9.1",
-    "multer": "^1.4.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-toastify": "^8.0.3",
-    "regenerator-runtime": "^0.13.9",
-    "uuid": "^8.3.2"
+    "react-toastify": "^8.0.3"
   },
   "devEngines": {
     "node": ">=14.x",
