feat: add start script

--- a/server/package.json
+++ b/server/package.json
@@ -6,6 +6,9 @@
   "author": "rynxiao",
   "license": "MIT",
   "private": true,
+  "scripts": {
+    "start": "node index.js"
+  },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
