--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "firebase-admin": "^10.0.0",
     "http-errors": "~1.6.3",
     "lodash": "^4.17.21",
+    "log4js": "^6.3.0",
     "morgan": "~1.9.1",
     "multer": "^1.4.3",
     "regenerator-runtime": "^0.13.9",
