--- a/package.json
+++ b/package.json
@@ -223,6 +223,7 @@
     "@mui/styles": "^5.0.1",
     "@mui/x-data-grid": "^5.0.0-beta.4",
     "axios": "^0.24.0",
+    "dayjs": "^1.10.7",
     "electron-debug": "^3.2.0",
     "electron-log": "^4.4.1",
     "electron-updater": "^4.3.9",
